--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                 <span class="badge badge-dark">*Другое*</span>
                 <hr>
                 <li><img class="icon" src="img/speed2.ico" alt="speedtest.ukrtelecom.ua"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
-				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><span class="opisi">Торрент</span></li>
-                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"><span class="opisi">Торрент</span></li>
-                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a><span class="opisi">Торрент</span></li>
+				<li><img class="icon" src="img/rutracker.org.png" alt="rutracker.org"><a href="https://rutracker.org/" target="_blank">rutracker.org</a><img class="icontoo" src="img/Torrent1.png" title ="Для скачивания нужна программа TORRENT"></li>
+                <li><img class="icon" src="img/nnmclub.to.png" alt="nnmclub.to"><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"><img class="icontoo" src="img/Torrent1.png" title ="Для скачивания нужна программа TORRENT"></li>
+                <li><img class="icon" src="img/filmitorrent.ico" alt="filmitorrent"><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a><img class="icontoo" src="img/Torrent1.png" title ="Для скачивания нужна программа TORRENT"></li>
                 <li><img class="icon" src="img/bible-teka.com.ico" alt="bible-teka.com"><a href="https://bible-teka.com/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span></li>
 				<li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
                 <li><img class="icon" src="img/vshkole.com.ico" alt="vshkole.com"><a href="https://vshkole.com/" target="_blank">vshkole</a><span class="opisi">ГДЗ/учебники</span></li>
