--- a/index.html
+++ b/index.html
@@ -1188,16 +1188,17 @@
                 <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novomyrhorod News (facebook)</a></li>
                 <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна державна адміністрація</a></li>
                 <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новомиргородська міська рада</a></li>
-                <li><img class="icon" src="img/school-1.ico" alt="github"><a href="http://novomyrgorod-school2.kr.sch.in.ua" target="_blank">Новомиргородська ЗШ №2</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="http://novomyrgorod-school1.edukit.kr.ua"><a href="http://novomyrgorod-school1.edukit.kr.ua" target="_blank">Новомиргородська ЗШ №1</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="http://novomyrgorod-school2.kr.sch.in.ua"><a href="http://novomyrgorod-school2.kr.sch.in.ua" target="_blank">Новомиргородська ЗШ №2</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-school3.edukit.kr.ua"><a href="http://novomyrgorod-school3.edukit.kr.ua/" target="_blank">Новомиргородська ЗШ №3</a></li>
-                <li><img class="icon" src="img/school-2.png" alt="zlatopilska-gymnasium.edukit.kr.ua"><a href="http://zlatopilska-gymnasium.edukit.kr.ua/" target="_blank">Златопільська гімназія</a></li>
-                <li><img class="icon" src="img/school-2.png" alt="osytniazhka-nm.edukit.kr.ua"><a href="http://osytniazhka-nm.edukit.kr.ua/" target="_blank">Оситнязька ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.png" alt="zlatopilska-gymnasium.edukit.kr.ua"><a href="http://zlatopilska-gymnasium.edukit.kr.ua/" target="_blank">Златопільська гімназія</a></li>
+                <li><img class="icon" src="img/school-1.png" alt="osytniazhka-nm.edukit.kr.ua"><a href="http://osytniazhka-nm.edukit.kr.ua/" target="_blank">Оситнязька ЗШ</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="kapitanivka-school.edukit.kr.ua"><a href="http://kapitanivka-school.edukit.kr.ua/" target="_blank">Капітанівська ЗШ</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-internat.edukit.kr.ua"><a href="http://novomyrgorod-internat.edukit.kr.ua/" target="_blank">Спец.школа інтернат інтенс.пед.корекції</a></li>
-                <li><img class="icon" src="img/school-2.png" alt="pancheve-school.edukit.kr.ua"><a href="http://pancheve-school.edukit.kr.ua/" target="_blank">Панчівська ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.png" alt="pancheve-school.edukit.kr.ua"><a href="http://pancheve-school.edukit.kr.ua/" target="_blank">Панчівська ЗШ</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-specschool.edukit.kr.ua"><a href="http://novomyrgorod-specschool.edukit.kr.ua/" target="_blank">Спецшкола-інтернат І-ІІІ ступ.</a></li>
-                <li><img class="icon" src="img/school-2.png" alt="kapitanivka-proflyceum.edukit.kr.ua"><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей переробної пром.</a></li>
-                <li><img class="icon" src="img/school-2.png" alt="novomyrgorod-sch2-club.edukit.kr.ua"><a href="http://novomyrgorod-sch2-club.edukit.kr.ua/" target="_blank">Євроклуб "Євроклас"</a></li>
+                <li><img class="icon" src="img/school-1.png" alt="kapitanivka-proflyceum.edukit.kr.ua"><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей переробної пром.</a></li>
+                <li><img class="icon" src="img/school-1.png" alt="novomyrgorod-sch2-club.edukit.kr.ua"><a href="http://novomyrgorod-sch2-club.edukit.kr.ua/" target="_blank">Євроклуб "Євроклас"</a></li>
               </ul>
             </div>
 
