--- a/index.html
+++ b/index.html
@@ -1181,24 +1181,24 @@
                 <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a></li>
                 <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Погода_Weather.com</a></li>
                 <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Погода_Gismeteo</a></li>
-				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a><span class="opisi">нужен VPN</span></li>
+				<li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a><img class="icontoo" src="img/VPN1.png" title ="Для работы нужен VPN"></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/channel/UCpx67qi-50ZnWOUlDqBhSNQ" target="_blank">Youtube_Новомиргородська ЗШ2</a></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
                 <li><img class="icon" src="img/facebook.com.ico" alt="facebook.com"><a href="https://www.facebook.com/groups/369041380158080/" target="_blank">Novomyrhorod News (facebook)</a></li>
                 <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна державна адміністрація</a></li>
                 <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новомиргородська міська рада</a></li>
-                <li><img class="icon" src="img/school-1.ico" alt="http://novomyrgorod-school1.edukit.kr.ua"><a href="http://novomyrgorod-school1.edukit.kr.ua" target="_blank">Новомиргородська ЗШ №1</a></li>
-                <li><img class="icon" src="img/school-1.ico" alt="http://novomyrgorod-school2.kr.sch.in.ua"><a href="http://novomyrgorod-school2.kr.sch.in.ua" target="_blank">Новомиргородська ЗШ №2</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-osvita.kr.sch.in.ua"><a href="http://novomyrgorod-osvita.kr.sch.in.ua/" target="_blank">Відділ освіти, молоді та спорту</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-school1.edukit.kr.ua"><a href="http://novomyrgorod-school1.edukit.kr.ua" target="_blank">Новомиргородська ЗШ №1</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-school2.kr.sch.in.ua"><a href="http://novomyrgorod-school2.kr.sch.in.ua" target="_blank">Новомиргородська ЗШ №2</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-school3.edukit.kr.ua"><a href="http://novomyrgorod-school3.edukit.kr.ua/" target="_blank">Новомиргородська ЗШ №3</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="zlatopilska-gymnasium.edukit.kr.ua"><a href="http://zlatopilska-gymnasium.edukit.kr.ua/" target="_blank">Златопільська гімназія</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="osytniazhka-nm.edukit.kr.ua"><a href="http://osytniazhka-nm.edukit.kr.ua/" target="_blank">Оситнязька ЗШ</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="kapitanivka-school.edukit.kr.ua"><a href="http://kapitanivka-school.edukit.kr.ua/" target="_blank">Капітанівська ЗШ</a></li>
-                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-internat.edukit.kr.ua"><a href="http://novomyrgorod-internat.edukit.kr.ua/" target="_blank">Спец.школа інтернат інтенс.пед.корекції</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="pancheve-school.edukit.kr.ua"><a href="http://pancheve-school.edukit.kr.ua/" target="_blank">Панчівська ЗШ</a></li>
+                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-internat.edukit.kr.ua"><a href="http://novomyrgorod-internat.edukit.kr.ua/" target="_blank">Спец.школа інтернат інтенс.пед.корекції</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-specschool.edukit.kr.ua"><a href="http://novomyrgorod-specschool.edukit.kr.ua/" target="_blank">Спецшкола-інтернат І-ІІІ ступ.</a></li>
                 <li><img class="icon" src="img/school-1.ico" alt="kapitanivka-proflyceum.edukit.kr.ua"><a href="http://kapitanivka-proflyceum.edukit.kr.ua/" target="_blank">Капіт-кий проф.ліцей переробної пром.</a></li>
-                <li><img class="icon" src="img/school-1.ico" alt="novomyrgorod-sch2-club.edukit.kr.ua"><a href="http://novomyrgorod-sch2-club.edukit.kr.ua/" target="_blank">Євроклуб "Євроклас"</a></li>
               </ul>
             </div>
 
