--- a/index.html
+++ b/index.html
@@ -1329,6 +1329,7 @@
 
             <div class="col-sm">
               <ul id="">
+			    <span class="badge badge-danger">*Пароль на архивы: zakladki2019*</span><p>
                 <span class="badge badge-warning">*Торрент-программы*</span>
                 <hr>
                 <li><img class="icon" src="img/utorrent.com.ico" alt="utorrent.com"><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a></li>
@@ -1340,6 +1341,14 @@
                 <li><img class="icon" src="img/telegram.ico" alt="tlgrm.ru"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
                 <li><img class="icon" src="img/viber.png" alt="viber.com"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>
                 <li><img class="icon" src="img/skype.ico" alt="skype.com"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-warning">*Удаленное управление компютером*</span>
+                <hr>
+                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.5"><a href="https://drive.google.com/open?id=1QvzG8rnDnzQretpXzPk_EVQ_YyBU7qf2" target="_blank">Ammyy_admin3.5.zip</a><img class="icontoo" src="img/zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.6"><a href="https://drive.google.com/open?id=1k00GTKjymlbk-eVR4zYEFLrwaHqk2oYb" target="_blank">Ammyy_admin3.6.zip</a><img class="icontoo" src="img/zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.7"><a href="https://drive.google.com/open?id=1aUH68RhLyTjEuOl3CyqJryJJnOmZPb5C" target="_blank">Ammyy_admin3.7.zip</a><img class="icontoo" src="img/zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+				<li><img class="icon" src="img/TeamViewer.png" alt="TeamViewer"><a href="https://drive.google.com/open?id=1MxHlp7JFKIZy-w5tgbD_5IWkpwGQBp6O" target="_blank">TeamViewer Free 14.1.3399 Portable.zip</a><img class="icontoo" src="img/zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
               </ul>
             </div>
 
