--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!--             <li class="nav-item"><a class="nav-link" id="magazinplus-tab" data-toggle="pill" href="#magazinplus" role="tab" aria-controls="magazinplus" aria-selected="false">Магазины+</a></li> -->
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">Городок</a></li>
-            <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li>
+            <!-- <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li> -->
             <li class="nav2-item"><a class="nav-link" onclick="topFunction()" id="progsis-tab" data-toggle="pill" href="#progsis" role="tab" aria-controls="progsis" aria-selected="false"><!-- тут може бути текст --><img class="pict-menu" src="img/progsis003.png" alt="github"></a></li>
           </ul>
 
@@ -1434,6 +1434,7 @@
             <a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a>
             <a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a>
             <a href="https://telegram.me/zakladki_top" target="_blank" title="Telegram: https://t.me/zakladki_top"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a>
+			<a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта" role="button">Поддержать сайт</a>
           </div>
         </div>
 
