--- a/index.html
+++ b/index.html
@@ -1422,6 +1422,11 @@
     <div class="container">
       <div class="row">
 
+        <div class="col-sm footer-col">
+          <div class="kolobok">
+			<a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта" role="button">Поддержать сайт</a>
+          </div>
+        </div>
 
         <div class="col-sm footer-col">
           <div class="kolobok">
@@ -1434,7 +1439,6 @@
             <a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a>
             <a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a>
             <a href="https://telegram.me/zakladki_top" target="_blank" title="Telegram: https://t.me/zakladki_top"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a>
-			<a class="btn btn-primary btn-sm" href="https://www.ipay.ua/ru/p2p/default/constructor/01e03758f825e60c5dc13b12941f5ddf" title="Переслать немного денег на содержание сайта" role="button">Поддержать сайт</a>
           </div>
         </div>
 
