--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <li><img class="icon" src="img/101.ru.ico" alt="101.ru"><a href="http://101.ru/" target="_blank">101.ru</a></li>
                 <li><img class="icon" src="img/zaycev.fm.ico" alt="zaycev"><a href="https://www.zaycev.fm/" target="_blank">zaycev.fm</a></li>
 <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Верхушки колонок -->
+<!-- 4 колонки 234*60+ -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:234px;height:60px"
      data-ad-client="ca-pub-3065705668384801"
@@ -182,7 +182,7 @@
                 <li><img class="icon" src="img/kurs.com.ua.ico" alt="kurs.com.ua"><a href="https://kurs.com.ua/" target="_blank">kurs</a><span class="opisi">Курс/конверт валют</span></li>
                 <li><img class="icon" src="img/bestchange.ru.png" alt="bestchange.ru"><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span></li>
 <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Верхушки колонок -->
+<!-- 4 колонки 234*60+ -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:234px;height:60px"
      data-ad-client="ca-pub-3065705668384801"
@@ -242,7 +242,7 @@
 				<li><img class="icon" src="img/slovohrista.org.jpg" alt="slovohrista.org"><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a></li>
                 <li><img class="icon" src="img/vshkole.com.ico" alt="vshkole.com"><a href="https://vshkole.com/" target="_blank">vshkole</a><span class="opisi">ГДЗ/учебники</span></li>
 <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Верхушки колонок -->
+<!-- 4 колонки 234*60+ -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:234px;height:60px"
      data-ad-client="ca-pub-3065705668384801"
@@ -278,7 +278,7 @@
                 <li><img class="icon" src="img/nmrda.kr-admin.gov.ua.jpg" alt="nmrda.kr-admin.gov.ua"><a href="http://nmrda.kr-admin.gov.ua/" target="_blank">Районна держ.адміністр.</a></li>
                 <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новом-ка міська рада</a></li>
 <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 250*360 -->
+<!-- 4-3 колонки-вконце 250*360++ -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:250px;height:360px"
      data-ad-client="ca-pub-3065705668384801"
@@ -310,6 +310,15 @@
                 <li><img class="icon" src="img/telegram.ico" alt="tlgrm.ru"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
                 <li><img class="icon" src="img/viber.png" alt="viber.com"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>
                 <li><img class="icon" src="img/skype.ico" alt="skype.com"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>
+<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 3 колонки-вконце 336*280++ -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-3065705668384801"
+     data-ad-slot="7850904161"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></center>
               </ul>
             </div>
 
@@ -338,6 +347,15 @@
                 <li><img class="icon" src="img/vsitut.com.png" alt="vsitut.com"><a href="https://vsitut.com/" target="_blank">Vsitut.com</a></li>
                 <li><img class="icon" src="img/vreale.net.ico" alt="vreale.net"><a href="http://vreale.net/reg33916" target="_blank">Vreale.net`</a></li>
                 <li><img class="icon" src="img/odnogrupniki.com.ua.ico" alt="odnogrupniki.com.ua"><a href="https://odnogrupniki.com.ua/reg32138" target="_blank">Odnogrupniki.com.ua`</a></li>
+<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 3 колонки 320*50+ -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:50px"
+     data-ad-client="ca-pub-3065705668384801"
+     data-ad-slot="1111124042"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></center>
               </ul>
             </div>
 
@@ -367,6 +385,15 @@
                 <li><img class="icon" src="img/ukrpost.ua.ico" alt="ukrpost.ua"><a href="http://ukrpost.ua/loginAction/form.flow" target="_blank">ukrpost</a></li>
                 <li><img class="icon" src="img/e-mail.ua.ico" alt="e-mail.ua"><a href="https://e-mail.ua/" target="_blank">e-mail.ua</a></li>
                 <li><img class="icon" src="img/mail.ex.ua.ico" alt="mail.ex.ua"><a href="https://mail.ex.ua/" target="_blank">mail.ex.ua</a></li>
+<center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 3 колонки 320*50+ -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:50px"
+     data-ad-client="ca-pub-3065705668384801"
+     data-ad-slot="1111124042"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></center>
               </ul>
             </div>
 
