--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <li><img class="icon" src="img/obozrevatel.com.ico" alt="obozrevatel.com"><a href="https://www.obozrevatel.com/" target="_blank">obozrevatel.com</a></li>
                 <li><img class="icon" src="img/segodnya.ua.png" alt="segodnya.ua"><a href="https://www.segodnya.ua/" target="_blank">segodnya.ua</a></li>
                 <li><img class="icon" src="img/online.ua.ico" alt="online.ua"><a href="https://www.online.ua/" target="_blank">online.ua</a></li>
-                <li><img class="icon" src="img/liga.net.png" alt="liga.net"><a href="https://www.liga.net/" target="_blank">liga.net</a></li>
+                <li><img class="icon" src="img/liga.net.ico" alt="liga.net"><a href="https://www.liga.net/" target="_blank">liga.net</a></li>
                 <li><img class="icon" src="img/expres.online.png" alt="expres.online"><a href="https://expres.online/" target="_blank">expres.online</a></li>
                 <li><img class="icon" src="img/telegraf.com.ua.ico" alt="telegraf.com.ua"><a href="https://telegraf.com.ua/" target="_blank">telegraf.com.ua</a></li>
               </ul>
@@ -1088,12 +1088,12 @@
               <ul id="">
                 <span class="badge badge-success">*Вода*</span>
                 <hr>
-                <li><img class="icon" src="img/maanimo.com.png" alt="maanimo.com"><a href="https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine" target="_blank">maanimo.com</a><span class="opisi">Цена.вода.Укр.</span></li>
+                <li><img class="icon" src="img/maanimo.com.ico" alt="maanimo.com"><a href="https://maanimo.com/indexes/140162-tarify-na-vodu-dlya-naseleniya-v-ukraine" target="_blank">maanimo.com</a><span class="opisi">Цена.вода.Укр.</span></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Отопление*</span>
                 <hr>
-                <li><img class="icon" src="img/maanimo.com.png" alt="maanimo.com"><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.отопл.Укр.</span></li>
+                <li><img class="icon" src="img/maanimo.com.ico" alt="maanimo.com"><a href="https://maanimo.com/indexes/142540-tarify-na-otoplenie-v-ukraine-sezon-2017-2018" target="_blank">maanimo.com</a><span class="opisi">Цена.отопл.Укр.</span></li>
               </ul>
             </div>
 
