--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-danger">*Новомиргород*</span>
+                <span class="badge badge-success">*Новомиргород*</span>
                 <hr>
                 <li><img class="icon" src="img/google.maps.png" alt="google.com.maps"><a href="https://www.google.com/maps/place/%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4,+%D0%9A%D1%96%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D1%80%D0%B0%D0%B4%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C/@48.7981251,31.5591162,12z/data=!3m1!4b1!4m5!3m4!1s0x40d1a5b80c2c8cdf:0x27e2a212ccc7175c!8m2!3d48.7907203!4d31.6582633" target="_blank">Карта Новомиргорода</a></li>
                 <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a></li>
@@ -1297,7 +1297,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-warning">*Городок-2*</span>
+                <span class="badge badge-success">*Городок-2*</span>
                 <hr>
                 <li><img class="icon" src="img/google.ico" alt="github"><a href="https://www.google.com.ua/" target="_blank">здесь будет инфо по городу №4</a></li>
               </ul>
@@ -1412,7 +1412,7 @@
 
             <div class="col-sm">
               <ul id="">
-			    <span class="badge badge-danger">*Пароль на архивы: zakladki2019*</span><p>
+			    <span class="badge badge-danger">Пароль на архивы: zakladki2019</span><p>
                 <span class="badge badge-warning">*Торрент-программы*</span>
                 <hr>
                 <li><img class="icon" src="img/utorrent.com.ico" alt="utorrent.com"><a href="https://www.utorrent.com/intl/ru/desktop/" target="_blank">Скачать utorrent</a></li>
@@ -1425,70 +1425,28 @@
                 <li><img class="icon" src="img/viber.png" alt="viber.com"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>
                 <li><img class="icon" src="img/skype.ico" alt="skype.com"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>
               </ul>
+            </div>
+
+            <div class="col-sm">
               <ul id="">
                 <span class="badge badge-warning">*Удаленное управление компютером*</span>
                 <hr>
-                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.8"><a href="https://drive.google.com/open?id=1PT7hUXJg_lgWEpWcTVEc9cKqAOQ6TiY1" target="_blank">Ammyy_admin3.8.zip</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
-                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.7"><a href="https://drive.google.com/open?id=1aUH68RhLyTjEuOl3CyqJryJJnOmZPb5C" target="_blank">Ammyy_admin3.7.zip</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
-				<li><img class="icon" src="img/TeamViewer.png" alt="TeamViewer"><a href="https://drive.google.com/open?id=1MxHlp7JFKIZy-w5tgbD_5IWkpwGQBp6O" target="_blank">TeamViewer Free 14.1.3399 Portable.zip</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
-              </ul>
-            </div>
-
-<!--             <div class="col-sm">
-              <ul id="">
-                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.8"><a href="https://drive.google.com/open?id=1PT7hUXJg_lgWEpWcTVEc9cKqAOQ6TiY1" target="_blank">Ammyy_admin3.8</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+                <li><img class="icon" src="img/ammyy_admin.png" alt="Ammyy_admin3.7"><a href="https://drive.google.com/open?id=1aUH68RhLyTjEuOl3CyqJryJJnOmZPb5C" target="_blank">Ammyy_admin3.7</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+				<li><img class="icon" src="img/TeamViewer.png" alt="TeamViewer"><a href="https://drive.google.com/open?id=1MxHlp7JFKIZy-w5tgbD_5IWkpwGQBp6O" target="_blank">TeamViewer 14.1.3399 Portable</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-warning">*Для N.O.D.32 продление лицензии*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/prog.tnod32.png" alt="TNod1.6.4.0Final+Portable"><a href="https://drive.google.com/open?id=1W-VCgsxRUvFafF_oXWoPhPwZ1pMt-dLT" target="_blank">TNod1.6.4.0Final+Portable</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+                <li><img class="icon" src="img/prog.tnod32.png" alt="TNod1.6.5.0Beta"><a href="https://drive.google.com/open?id=1FXzFYfft3nsMDDjE4R1l4eLIb9nJj3Yw" target="_blank">TNod1.6.5.0Beta</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+				<li><img class="icon" src="img/prog.tnod32.png" alt="TNod1.6.6.0Beta+Portable"><a href="https://drive.google.com/open?id=1X1cmktodjyPf80bbpuekVcmJXMys73Gq" target="_blank">TNod1.6.6.0Beta+Portable</a><img class="icontoo" src="img/0zippass.png" title ="заархивировано/пароль: zakladki2019"></li>
+				<li><img class="icon" src="img/prog.tnod32.info.png" alt="info_N.O.D.32_ESET"><a href="https://drive.google.com/open?id=1XHGmrAC9EnDg1I7SJ9xP1STImwE6UKd7" target="_blank">Инструкции для N.O.D.32 ESET</a></li>
               </ul>
-              <ul id="">
-                <span class="badge badge-dark">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-warning">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-danger">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div> -->
+            </div>
 
           </div>
         </div>
