--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 
     gtag('config', 'UA-55202239-3');
   </script>
+  
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GA_TRACKING_ID');
+</script>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
