--- a/index.html
+++ b/index.html
@@ -826,6 +826,7 @@
                 <li><img class="icon" src="img/autoklad.ua.ico" alt="autoklad"><a href="https://letyshops.com/r/avtoklad-ua-4qh7st5csyassk" target="_blank">autoklad.ua`</a></li>
                 <li><img class="icon" src="img/avtoopt.in.ua.ico" alt="avtoopt"><a href="https://letyshops.com/r/avtoopt-ua-4qh7st5csyeckc" target="_blank">avtoopt.in.ua`</a></li>
                 <li><img class="icon" src="img/avtodiski.net.ua.ico" alt="avtodiski"><a href="https://letyshops.com/r/avtodiski-ua-4qh7st5csygwc8" target="_blank">avtodiski.net.ua`</a></li>
+                <li><img class="icon" src="img/master-plus.com.ua.ico" alt="master-plus"><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a></li>
               </ul>
             </div>
 
@@ -870,6 +871,12 @@
                 <li><img class="icon" src="img/apteka911.com.ua.png" alt="apteka911"><a href="https://letyshops.com/r/apteka-911-4qh7st5ct08woo" target="_blank">apteka911.com.ua`</a></li>
                 <li><img class="icon" src="img/apteka24.ua.ico" alt="apteka24"><a href="https://letyshops.com/r/apteka24-4qh7st5ct0cggg" target="_blank">apteka24.ua`</a></li>
                 <li><img class="icon" src="img/doc.ua.ico" alt="doc.ua"><a href="https://letyshops.com/r/doc-ua-4qh7st5ct0cggg" target="_blank">doc.ua`</a></li>
+                <li><img class="icon" src="img/med-magazin.ua.ico" alt="med-magazin.ua"><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-success">*Сад/Огород*</span>
+                <hr>
+                <li><img class="icon" src="img/florium.ua.ico" alt="florium.ua"><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a></li>
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Образование (изучение языков)*</span>
