edit news version

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
                 <li><img class="icon" src="img/rada-novomirgorod.gov.ua.ico" alt="rada-novomirgorod.gov.ua"><a href="http://rada-novomirgorod.gov.ua/" target="_blank">Новом-ка міська рада</a></li>
               </ul>
               <ul>
-                <span class="badge badge-danger">Обнова в закладках 2019-03-13</span>
+                <span class="badge badge-danger">Обнова в закладках: v.2019-03-13</span>
                 <hr>
-                <li><img class="icon" src="img/florium.ua.ico" alt="florium.ua"><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a></li>
-                <li><img class="icon" src="img/med-magazin.ua.ico" alt="med-magazin.ua"><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a></li>
-                <li><img class="icon" src="img/master-plus.com.ua.ico" alt="master-plus"><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a></li>
+                <li><img class="icon" src="img/florium.ua.ico" alt="florium.ua"><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a><img class="icontoo" src="img/0info-add2.png" title ="Добавлен в ZAKLADKI"><img class="icontoo" src="img/0info-opis1.png" title ="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине."></li>
+                <li><img class="icon" src="img/med-magazin.ua.ico" alt="med-magazin.ua"><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a><img class="icontoo" src="img/0info-add2.png" title ="Добавлен в ZAKLADKI"><img class="icontoo" src="img/0info-opis6.png" title ="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине"></li>
+                <li><img class="icon" src="img/master-plus.com.ua.ico" alt="master-plus"><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a><img class="icontoo" src="img/0info-add2.png" title ="Добавлен в ZAKLADKI"><img class="icontoo" src="img/0repa3.png" title ="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс"></li>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 4-3 колонки-вконце 250*360++ -->
 <ins class="adsbygoogle"
