--- a/index.html
+++ b/index.html
@@ -407,18 +407,18 @@
                 <div class="group-title"><span class="badge badge-danger">Обнова в закладках: v.2019-03-13</span></div>
                 <ul>
                   <li>
-                    <div class="icon florium ua"></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon florium ua"></div>
+                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/florium-ua-4qh7st5ocnmsoc" target="_blank">florium.ua`</a>
                     <div class="icontooinfo a0info-opis1" title="Раздел-Магазины. Флориум - Интернет магазин семян, саженцев садовых, комнатных растений и цветов в Украине." alt=""></div>
                   </li>
                   <li>
-                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon med-magazin ua"></div>
+                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/med-magazin-ua-4qh7st5oclk40c" target="_blank">med-magazin.ua`</a>
                     <div class="icontooinfo a0info-opis6" title="Раздел-Магазины. Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon master-plus com ua"></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
-                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div>
+                    <div class="icon master-plus com ua"></div>
+                    <div class="icontooinfo a0info-add2" title="Добавлен в ZAKLADKI" alt=""></div><a href="https://letyshops.com/r/master-plius-ua-4qh7st5ocjk0w4" target="_blank">master-plus.com.ua`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Магазины. Интернет магазин запчастей для стиральных машин, холодильников и другой бытовой техники. ТМ Мастер-Плюс" alt=""></div>
                   </li>
                 </ul>
