--- a/index.html
+++ b/index.html
@@ -340,16 +340,16 @@
                   </li>
                   <li>
                     <div class="icon rutracker org"></div><a href="https://rutracker.org/" target="_blank">rutracker.org</a>
-                    <div class="icontooinfo a0Torrent1" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon nnmclub to"></div><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a>
                     <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
-                    <div class="icontooinfo a0Torrent1" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon filmitorrent"></div><a href="http://filmitorrent.xyz/" target="_blank">filmitorrent_TOP</a>
-                    <div class="icontooinfo a0Torrent1" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon bible-teka com"></div><a href="https://bible-teka.com/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span>
