--- a/media.html
+++ b/media.html
@@ -209,11 +209,11 @@
                   </li>
                   <li>
                     <div class="icon nnmclub to"></div><a href="http://nnmclub.to/forum/portal.php?c=25" target="_blank">nnm.Сборники</a>
-                    <div class="icontooinfo a0Torrent1" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon nnmclub to"></div><a href="http://nnmclub.to/forum/index.php?c=16" target="_blank">nnm.Вся.Муз.</a>
-                    <div class="icontooinfo a0Torrent1" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
                   </li>
                 </ul>
               </div>
